openturns/1.16/_sources/auto_probabilistic_modeling/distributions/plot_conditional_distribution.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_probabilistic_modeling_distributions_plot_conditional_distribution.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_auto_probabilistic_modeling_distributions_plot_conditional_distribution.py:


Create a conditional distribution
=================================

In this example we are going to build the distribution of the random vector X conditioned by the random variable Theta

.. math:: 
   \underline{X}|\underline{\Theta}

with Theta obtained with the random variable Y through a function f

.. math:: 
   \underline{\Theta}=f(\underline{Y})



.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt








create the Y distribution


.. code-block:: default

    YDist = ot.Uniform(-1.0, 1.0)








create Theta=f(y)


.. code-block:: default

    f = ot.SymbolicFunction(['y'], ['y', '1+y^2'])








create the X|Theta distribution


.. code-block:: default

    XgivenThetaDist = ot.Uniform()








create the distribution


.. code-block:: default

    XDist = ot.ConditionalDistribution(XgivenThetaDist, YDist, f)
    XDist.setDescription(['X|Theta=f(y)'])
    XDist






.. raw:: html

    <p>ConditionalDistribution(X with X|Theta~Uniform(Theta), Theta=f(Y), f=[y]->[y,1+y^2], Y~Uniform(a = -1, b = 1))</p>
    <br />
    <br />

Get a sample


.. code-block:: default

    XDist.getSample(5)






.. raw:: html

    <TABLE><TR><TD></TD><TH>X|Theta=f(y)</TH></TR>
    <TR><TH>0</TH><TD>0.635176</TD></TR>
    <TR><TH>1</TH><TD>0.4034392</TD></TR>
    <TR><TH>2</TH><TD>0.3888339</TD></TR>
    <TR><TH>3</TH><TD>0.9779865</TD></TR>
    <TR><TH>4</TH><TD>0.4113054</TD></TR>
    </TABLE>
    <br />
    <br />

draw PDF


.. code-block:: default

    graph = XDist.drawPDF()
    view = viewer.View(graph)
    plt.show()



.. image:: /auto_probabilistic_modeling/distributions/images/sphx_glr_plot_conditional_distribution_001.png
    :alt: plot conditional distribution
    :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.107 seconds)


.. _sphx_glr_download_auto_probabilistic_modeling_distributions_plot_conditional_distribution.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_conditional_distribution.py <plot_conditional_distribution.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_conditional_distribution.ipynb <plot_conditional_distribution.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
